--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>3.3-vazifa</title>
 </head>
 <body>
@@ -24,80 +25,146 @@
                     <input class="form-control mb-3" list="datalistOptions" placeholder="Rating (High to low)">
                     <datalist id="datalistOptions">
                         <option value="High to low">
-                        <option value="Low to high">
-                    </datalist>
-                    <button type="submit" class="btn btn-primary w-100">Search</button>
-                </div>
-                <h2 class="text-center mb-3">
-                    Bookmarked movies
-                </h2>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Avangers: Infinity War <button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
-                    <li class="list-group-item">The Avangers <button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
-                    <li class="list-group-item">12 Years a Slave<button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
-                </ul>
-            </div>
-            <div class="col-8">
-                <strong class="mb-4">Search result: 39</strong>
-                <div class="alert alert-info mt-2 mb-3" role="alert">
-                    Use the form on the left to search for a movie
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="card">
-                            <img src="/images/infinity-war.jpg" class="card-img-top img-fluid" alt="a picture">
-                            <div class="card-body">
-                                <h5 class="card-title">Avangers: Infinity War</h5>
-                                <div class="d-flex mb-3">
-                                    <img src="./images/calendar.svg" alt="calendar logo" width="24" height="24">
-                                    <time class="card-text">2018</time>
+                            <option value="Low to high">
+                            </datalist>
+                            <button type="submit" class="btn btn-primary w-100">Search</button>
+                        </div>
+                        <h2 class="text-center mb-3">
+                            Bookmarked movies
+                        </h2>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Avengers: Infinity War <button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
+                            <li class="list-group-item">The Avengers <button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
+                            <li class="list-group-item">12 Years a Slave<button type="submit" class="btn btn-danger d-block mt-2">Remove</button></li>
+                        </ul>
+                    </div>
+                    <div class="col-8">
+                        <strong class="mb-4">Search result: 39</strong>
+                        <div class="alert alert-info mt-2 mb-3" role="alert">
+                            Use the form on the left to search for a movie
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="card">
+                                    <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="./images/avengers.jpg" class="d-block w-100" alt="ironman" width="413" height="231">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="./images/infinity-war.jpg" class="d-block w-100" alt="ironman" width="413" height="231">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="./images/kartinki-mstiteli-33.jpg" class="d-block w-100" alt="ironman" width="413" height="231">
+                                            </div>
+                                        </div>
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Avengers: Infinity War</h3>
+                                        <div class="d-flex mb-2">
+                                            <img class="me-2" src="./images/calendar.svg" alt="calendar" width="25" height="25">
+                                            <span>2018</span>
+                                        </div>
+                                        <div class="d-flex mb-3">
+                                            <img class="me-2" src="./images/star.svg" alt="calendar" width="25" height="25">
+                                            <span>8.1</span>
+                                        </div>
+                                        <button type="button" class="btn btn-outline-primary">Watch trailer</button>
+                                        <button type="button" class="btn btn-outline-info mx-3" data-bs-toggle="modal" data-bs-target="#exampleModal">More info</button>
+                                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Avengers 2018</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the sequel to The Avengers (2012) and Avengers: Age of Ultron (2015), and the 19th film in the Marvel Cinematic Universe (MCU). Directed by Anthony and Joe Russo and written by Christopher Markus and Stephen McFeely, the film features an ensemble cast including Robert Downey Jr., Chris Hemsworth, Mark Ruffalo, Chris Evans, Scarlett Johansson, Benedict Cumberbatch, Don Cheadle, Tom Holland, Chadwick Boseman, Paul Bettany, Elizabeth Olsen, Anthony Mackie, Sebastian Stan, Danai Gurira, Letitia Wright, Dave Bautista, Zoe Saldaña, Josh Brolin, and Chris Pratt. In the film, the Avengers and the Guardians of the Galaxy attempt to prevent Thanos from collecting the six all-powerful Infinity Stones as part of his quest to kill half of all life in the universe.                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <button type="button" class="btn btn-outline-success">Bookmark</button>
+                                    </div>
                                 </div>
-                                <div class="d-flex mb-3">
-                                    <img class="" src="./images/star.svg" alt="star logo" width="24" height="24">
-                                    <span>8.7</span>
-                                </div>
-                                <div class="d-flex justify-content-between mb-2">
-                                    <button type="button" class="btn btn-outline-primary">Watch trailer</button>
-                                    <button type="button" class="btn btn-outline-info">More info</button>
-                                    <button type="button" class="btn btn-outline-success">Bookmark</button>
+                            </div>
+                            <div class="col-6">
+                                <div class="card">
+                                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <img src="./images/infinity-war.jpg" class="d-block w-100" alt="avengers" width="413" height="231">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="./images/kartinki-mstiteli-33.jpg" class="d-block w-100 " alt="avengers" width="413" height="231">
+                                            </div>
+                                            <div class="carousel-item">
+                                                <img src="./images/avengers.jpg`" class="d-block w-100" alt="avebgers" width="413" height="231">
+                                            </div>
+                                        </div>
+                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Previous</span>
+                                        </button>
+                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="visually-hidden">Next</span>
+                                        </button>
+                                    </div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">The avengers</h3>
+                                        <div class="d-flex mb-2">
+                                            <img class="me-2" src="./images/calendar.svg" alt="calendar" width="25" height="25">
+                                            <span>2012</span>
+                                        </div>
+                                        <div class="d-flex mb-3">
+                                            <img class="me-2" src="./images/star.svg" alt="calendar" width="25" height="25">
+                                            <span>8.1</span>
+                                        </div>
+                                        <button type="button" class="btn btn-outline-primary">Watch trailer</button>
+                                        <button type="button" class="btn btn-outline-info mx-3" data-bs-toggle="modal" data-bs-target="#ironman">More info</button>
+                                        <div class="modal fade" id="ironman" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="ModalLabel">Ironman 2012</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Iron Man is a 2008 American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Paramount Pictures,[N 1] it is the first film in the Marvel Cinematic Universe (MCU). Directed by Jon Favreau from a screenplay by the writing teams of Mark Fergus and Hawk Ostby, and Art Marcum and Matt Holloway, the film stars Robert Downey Jr. as Tony Stark / Iron Man alongside Terrence Howard, Jeff Bridges, Shaun Toub, and Gwyneth Paltrow. In the film, following his escape from captivity by a terrorist group, world famous industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the superhero Iron Man.                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <button type="button" class="btn btn-outline-success">Bookmark</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <nav>
+                            <ul class="pagination d-flex justify-content-center mt-4">
+                                <li class="page-item active" aria-current="page">
+                                    <span class="page-link">1</span>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                            </ul>
+                        </nav>
                     </div>
-                    <div class="col-6">
-                        <div class="card">
-                            <img src="/images/avengers.jpg" class="card-img-top img-fluid" alt="a picture">
-                            <div class="card-body">
-                                <h5 class="card-title">The Avangers</h5>
-                                <div class="d-flex mb-3">
-                                    <img src="./images/calendar.svg" alt="calendar logo" width="24" height="24">
-                                    <time class="card-text">2018</time>
-                                </div>
-                                <div class="d-flex mb-3">
-                                    <img class="" src="./images/star.svg" alt="star logo" width="24" height="24">
-                                    <span>8.7</span>
-                                </div>
-                                <div class="d-flex justify-content-between mb-2">
-                                    <button type="button" class="btn btn-outline-primary">Watch trailer</button>
-                                    <button type="button" class="btn btn-outline-info">More info</button>
-                                    <button type="button" class="btn btn-outline-success">Bookmark</button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                </div>
-                <nav>
-                    <ul class="pagination d-flex justify-content-center mt-4">
-                    <li class="page-item active" aria-current="page">
-                        <span class="page-link">1</span>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    </ul>
-                </nav>
             </div>
-        </div>
-    </div>
-</body>
-</html>
+        </body>
+        </html>
